@@ -4,6 +4,8 @@
 	- NPCs run away from running water
 - The Move, Remove, and Turnaround NPC tools may now be used on *groups* of NPCs
 - NPCs on a ship are now lit by the ship's lamps
+- Bug fixes:
+	- Fixed a crash when using the repair tool on a part of the ship that had exploded (thanks to AlexGuy!)
 
 1.19.0
 - Initial implementation of NPCs!
